--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,2 +1,8 @@
+$footer-padding: 1rem;
+
 @import "~bulma/bulma.sass";
+@import "./layouts/index";
 @import "styles";
+@import "./components/index"
+
+
