updated featured image

--- a/src/sass/layouts/_home.scss
+++ b/src/sass/layouts/_home.scss
@@ -28,7 +28,7 @@
     }
 
     &__primary {
-      background: url("https://hackfestkathmandu.github.io/assets/images/hero.jpg") no-repeat;
+      background: url("/images/featured/frontend-meetup-2017.jpg") no-repeat;
       background-size: cover;
       height: 400px;
       position: relative;
