--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,8 +3,9 @@ $widescreen: 1024px;
 $fullhd: 1152px;
 
 @import "~bulma/bulma.sass";
+@import "~bulma-helpers/bulma-helpers.sass";
 @import "./layouts/index";
 @import "styles";
-@import "./components/index"
-
+@import "./components/index";
+@import "~bulma-timeline";
 
