hack fest kathmandu page changes

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,8 +4,9 @@ $fullhd: 1152px;
 
 @import "~bulma/bulma.sass";
 @import "~bulma-helpers/bulma-helpers.sass";
+@import "./helpers/index";
+@import "./mixins/index";
 @import "./layouts/index";
 @import "styles";
 @import "./components/index";
 @import "~bulma-timeline";
-
