--- a/src/templates/hackfestktm.html
+++ b/src/templates/hackfestktm.html
@@ -280,6 +280,52 @@
   </section>
 
   <section class="section is-small">
+    <h4 class="title is-5 is-spaced has-text-centered">Challenges</h4>
+    <div class="container">
+      <div class="columns">
+        <div class="column">
+          <div class="card">
+            <div class="card-content">
+              <div class="content">
+
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+              </div>
+            </div>
+            <!-- <footer class="card-footer">
+              <a href="#" class="card-footer-item">More details</a>
+            </footer> -->
+          </div>
+        </div>
+        <div class="column">
+          <div class="card ">
+            <div class="card-content">
+              <div class="content has-text-left">
+                <h4 class="title is-6 is-spaced">Youth employment</h4>
+
+                Build anything that creates / facilitates a lot of new jobs and attracts a lot of talented people.
+              </div>
+            </div>
+            <!-- <footer class="card-footer">
+              <a href="#" class="card-footer-item">More details</a>
+            </footer> -->
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <div class="card-content">
+              <div class="content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
+              </div>
+            </div>
+            <!-- <footer class="card-footer">
+              <a href="#" class="card-footer-item">More details</a>
+            </footer> -->
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <section class="section is-small">
     <div class="container">
 
       <h4 class="title is-5 is-spaced has-text-centered">FAQs</h4>
@@ -687,50 +733,7 @@
                         d="M810.3,655.7h-14.9c-18.7,0-38.1,4.2-43.3,9.4l-59.3,68.4c-5.1,5.1,5.9,9.4,24.6,9.4h94.7" />
                     </g>
                     <path class="st8" d="M475.8,771c0-59.8,48.5-108.2,108.2-108.2c59.8,0,108.2,48.5,108.2,108.2" />
-                    <g>
-                      <rect x="677.4" y="679.3" class="st9" width="9.3" height="4.1" />
-                      <rect x="677.4" y="708.4" class="st9" width="9.3" height="4.1" />
-                      <rect x="775.1" y="679.3" class="st9" width="9.3" height="4.1" />
-                      <rect x="775.1" y="708.4" class="st9" width="9.3" height="4.1" />
-                      <g>
-                        <rect x="686.7" y="614.6" class="st10" width="7.7" height="109" />
-                        <rect x="686.7" y="614.6" class="st9" width="3.8" height="109" />
-                      </g>
-                      <g>
-                        <rect x="726.8" y="614.6" class="st10" width="7.7" height="23.2" />
-                        <rect x="726.8" y="614.6" class="st9" width="3.8" height="23.2" />
-                      </g>
-                      <g>
-                        <rect x="767.4" y="614.6" class="st10" width="7.7" height="109" />
-                        <rect x="767.4" y="614.6" class="st9" width="3.8" height="109" />
-                      </g>
-                      <g>
-                        <rect x="669.7" y="669.1" class="st10" width="7.7" height="54.5" />
-                        <rect x="669.7" y="669.1" class="st9" width="3.8" height="54.5" />
-                      </g>
-                      <g>
-                        <rect x="783.7" y="669.1" class="st10" width="7.7" height="54.5" />
-                        <rect x="783.7" y="669.1" class="st9" width="3.8" height="54.5" />
-                      </g>
-                      <g>
-                        <g>
-                          <rect x="665.6" y="636.5" class="st10" width="65.3" height="5.1" />
-                          <rect x="665.6" y="636.5" class="st9" width="65.3" height="2.5" />
-                        </g>
-                        <g>
-                          <rect x="730.9" y="636.5" class="st10" width="65.3" height="5.1" />
-                          <rect x="730.9" y="639.1" class="st9" width="65.3" height="2.5" />
-                        </g>
-                      </g>
-                      <path class="st11" d="M652.8,601c0,0,33.4,11.5,78.2,11.8" />
-                      <path class="st12" d="M638.6,588.4c0,0,39.4,13.5,92.4,13.9" />
-                      <path class="st13" d="M632.9,577.9c0,0,41.9,14.4,98.1,14.7" />
-                      <path class="st14" d="M808.9,601c0,0-33.4,11.5-78.2,11.8" />
-                      <path class="st15" d="M823,588.4c0,0-39.4,13.5-92.4,13.9" />
-                      <path class="st16" d="M828.7,577.9c0,0-41.9,14.4-98.1,14.7" />
-                      <rect x="668.4" y="665.9" class="st17" width="10.2" height="3.2" />
-                      <rect x="782.4" y="665.9" class="st17" width="10.2" height="3.2" />
-                    </g>
+
                     <g>
                       <g>
                         <path class="st18"
