remove padding on nav item

--- a/src/templates/hackfestktm.html
+++ b/src/templates/hackfestktm.html
@@ -27,7 +27,7 @@
 <body class="hackfestktm">
   <nav class="navbar container is-transparent" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="/" style="padding-left: 0;">
+      <a class="navbar-item" href="/">
         <svg xmlns="http://www.w3.org/2000/svg" width="206.023" height="44">
           <g fill="#fff">
             <g data-name="Group 27">
