--- a/src/sass/layouts/_hackfest.scss
+++ b/src/sass/layouts/_hackfest.scss
@@ -72,7 +72,32 @@
   }
 
   .sponsorship {
-    padding-top: 0;
-    padding-bottom: 0;
+    background: url('/images/hackfest/sponsorshop-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+    &:after{
+      content: '';
+      background: url(https://ghost.org/images/docs/bg-home.svg) no-repeat, linear-gradient(60deg, #562db5, #19afc9);
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+    }
+
+    >div{
+      position: relative;
+      z-index: 2;
+      opacity: .8;
+    }
+
+    &-content{
+      padding: 3rem 0;
+      text-align: center;
+      max-width: 600px;
+      margin: 0 auto;
+    }
   }
 }
