--- a/src/sass/layouts/_hackfest.scss
+++ b/src/sass/layouts/_hackfest.scss
@@ -71,6 +71,11 @@
     }
   }
 
+  .about-tab{
+    max-width: 660px;
+    margin: 0 auto;
+  }
+
   .sponsorship {
     background: url('/images/hackfest/sponsorshop-bg.jpg');
     background-repeat: no-repeat;
