--- a/src/templates/hackfestktm.html
+++ b/src/templates/hackfestktm.html
@@ -72,6 +72,7 @@
         <div class="tabs is-boxed">
           <ul>
             <li class="tab is-active" onclick="openHackFestTab(event,'home')"><a>Home</a></li>
+            <li class="tab" onclick="openHackFestTab(event,'about')"><a>About</a></li>
             <li class="tab" onclick="openHackFestTab(event,'workshops')"><a>Workshops</a></li>
           </ul>
         </div>
@@ -396,6 +397,83 @@
 
   </div>
   <!-- Home -->
+
+  <!-- About -->
+  <div id="about" class="content-tab">
+    <section class="about-tab section is-small">
+      <div class="container">
+
+        <div class="has-margin-bottom-4">
+          <h2 class="title is-5 has-margin-bottom-6">Introduction</h2>
+          <p>
+            A hackathon is an event that gathers programmers and tech enthusiasts with different skill sets to “hack”,
+            or work
+            collaboratively, on a software project.
+          </p>
+
+          <br />
+
+          <p>During the event, each team will develop a solution focussing on
+          one of the challenges provided. Each team will be assigned mentors for assistance in the project they are
+          building. Hackers can use
+          web or mobile platform using programming language of their choice to work on their project.</p>
+        </div>
+
+        <div class="has-margin-bottom-4">
+          <h4 class="title is-5 has-margin-bottom-6">Organizers</h2>
+            <div class="has-margin-bottom-5">
+              <h4 class="title is-6 has-margin-bottom-7">
+                <a href="https://www.facebook.com/groups/frontenderscommnunitynepal/" target="_blank">Frontenders
+                  Community Nepal</a>
+              </h4>
+              <p>
+                Frontenders Community Nepal is a community with the motive of sharing skills among frontend developers
+                and educating
+                students and developers community about frontend web development.
+              </p>
+            </div>
+
+            <div class="has-margin-bottom-5">
+              <h4 class="title is-6 has-margin-bottom-7">
+                <a href="https://www.facebook.com/wlitnepal/" target="_blank">Women Leaders in Technology</a>
+              </h4>
+              <p>
+                WLiT is a technical and professional leadership development organization for young women in Nepal with a
+                vision to
+                empower women to become leaders and innovators.
+              </p>
+            </div>
+
+        </div>
+
+        <div class="has-margin-bottom-4">
+          <h4 class="title is-5 has-margin-bottom-6">Supporters</h2>
+            <div class="has-margin-bottom-5">
+              <h4 class="title is-6 has-margin-bottom-7">
+                <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">Facebook Developer Circles Kathmandu</a>
+              </h4>
+              <p>
+                Developer Circles from Facebook is a program designed to create locally organized communities for students and
+                developers. These communities are meant to educate and provide a forum for discussion and knowledge sharing.
+
+              </p>
+            </div>
+        
+            <div class="has-margin-bottom-5">
+              <h4 class="title is-6 has-margin-bottom-7">
+                <a href="https://www.facebook.com/flutterNP/" target="_blank">Flutter Nepal</a>
+              </h4>
+              <p>
+                WLiT is a technical and professional leadership development organization for young women in Nepal with a
+                vision to
+                empower women to become leaders and innovators.
+              </p>
+            </div>
+        
+        </div>
+
+    </section>
+  </div>
 
   <!-- Workshops -->
   <div id="workshops" class="content-tab">
