--- a/src/templates/hackfestktm.html
+++ b/src/templates/hackfestktm.html
@@ -341,59 +341,61 @@
         </div>
     </section>
 
-    <!-- <section class="section is-small">
-              <div class="container">
-          
-                <h4 class="title is-5 is-spaced has-text-centered">FAQs</h4>
-          
-                <div class="faq columns">
-          
-                  <div class="column is-6">
-                    <div>
-                      <h6 class="title is-6">Who can participate?</h6>
-                      <p>We are focussing this hackathon for the high school students.
-                        So, if you are a bachelor student, you can join the hackathon. A team of great mentors will be there to
-                        advise and guide you each step of the way to complete your project.</p>
-                    </div>
-                    <div>
-                      <h6 class="title is-6">How big can be a team ?</h6>
-                      <p> You need at least two meambers to form a team.
-                        You can form teams of up to 5 people. Most teams aim to have a mix of people with both design and
-                        developer
-                        skills.</p>
-                    </div>
-                    <div>
-                      <h6 class="title is-6">What if I don't have a team or an idea ?</h6>
-                      <p>Not to worry, most people don’t! We’ll have team formation and ideation event geared towards helping you
-                        find people to work with. You can join our <a
-                          href="https://www.facebook.com/groups/hackfestktm/"> Facebook Group</a> to find potential
-                        teammates.</p>
-                    </div>
-                  </div>
-          
-                  <div class="column is-6">
-                    <div>
-                      <h6 class="title is-6">Is it a overnight hackathon ?</h6>
-                      <p>We believe that along with programming and stuffs, sound sleep is also equally important for hackers. So,
-                        participants can return home at the end of the day and come back next day with renewed energy. </p>
-                    </div>
-                    <div>
-                      <h6 class="title is-6">What should I bring ?</h6>
-                      <p>You should probably bring laptop and charger.</p>
-                    </div>
-          
-                    <div>
-                      <h6 class="title is-6">How can I get involved if I am not participating ? </h6>
-                      <p>If you're looking to be a volunteer or mentor (i.e. someone with technical skills who'd be willing to
-                        help
-                        out participants during the weekend), you should reach out to us in our <a
-                          href="https://www.facebook.com/groups/hackfestktm/"> Facebook Group</a> </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              </div>
-            </section> -->
+    <section class="section is-small">
+      <div class="container">
+
+        <h4 class="title is-5 is-spaced has-text-centered">FAQs</h4>
+
+        <div class="faq columns">
+
+          <div class="column is-6">
+            <div>
+              <h6 class="title is-6">Who can participate?</h6>
+              <p>We are focussing this hackathon for the high school students.
+                So, if you are a bachelor student, you can join the hackathon. A team of great mentors will be there to
+                advise and guide you each step of the way to complete your project.</p>
+            </div>
+            <div>
+              <h6 class="title is-6">How big can be a team ?</h6>
+              <p> You need at least two meambers to form a team.
+                You can form teams of up to 5 people. Most teams aim to have a mix of people with both design and
+                developer
+                skills.</p>
+            </div>
+            <div>
+              <h6 class="title is-6">What if I don't have a team or an idea ?</h6>
+              <p>Not to worry, most people don’t! We’ll have team formation and ideation event geared towards helping
+                you
+                find people to work with. You can join our <a href="https://www.facebook.com/groups/hackfestktm/">
+                  Facebook Group</a> to find potential
+                teammates.</p>
+            </div>
+          </div>
+
+          <div class="column is-6">
+            <div>
+              <h6 class="title is-6">Is it a overnight hackathon ?</h6>
+              <p>We believe that along with programming and stuffs, sound sleep is also equally important for hackers.
+                So,
+                participants can return home at the end of the day and come back next day with renewed energy. </p>
+            </div>
+            <div>
+              <h6 class="title is-6">What should I bring ?</h6>
+              <p>You should probably bring laptop and charger.</p>
+            </div>
+
+            <div>
+              <h6 class="title is-6">How can I get involved if I am not participating ? </h6>
+              <p>If you're looking to be a volunteer or mentor (i.e. someone with technical skills who'd be willing to
+                help
+                out participants during the weekend), you should reach out to us in our <a
+                  href="https://www.facebook.com/groups/hackfestktm/"> Facebook Group</a> </p>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+  </section>
 
   </div>
   <!-- Home -->
@@ -414,9 +416,9 @@
           <br />
 
           <p>During the event, each team will develop a solution focussing on
-          one of the challenges provided. Each team will be assigned mentors for assistance in the project they are
-          building. Hackers can use
-          web or mobile platform using programming language of their choice to work on their project.</p>
+            one of the challenges provided. Each team will be assigned mentors for assistance in the project they are
+            building. Hackers can use
+            web or mobile platform using programming language of their choice to work on their project.</p>
         </div>
 
         <div class="has-margin-bottom-4">
@@ -450,15 +452,18 @@
           <h4 class="title is-5 has-margin-bottom-6">Supporters</h2>
             <div class="has-margin-bottom-5">
               <h4 class="title is-6 has-margin-bottom-7">
-                <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">Facebook Developer Circles Kathmandu</a>
+                <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">Facebook Developer Circles
+                  Kathmandu</a>
               </h4>
               <p>
-                Developer Circles from Facebook is a program designed to create locally organized communities for students and
-                developers. These communities are meant to educate and provide a forum for discussion and knowledge sharing.
+                Developer Circles from Facebook is a program designed to create locally organized communities for
+                students and
+                developers. These communities are meant to educate and provide a forum for discussion and knowledge
+                sharing.
 
               </p>
             </div>
-        
+
             <div class="has-margin-bottom-5">
               <h4 class="title is-6 has-margin-bottom-7">
                 <a href="https://www.facebook.com/flutterNP/" target="_blank">Flutter Nepal</a>
@@ -469,7 +474,7 @@
                 empower women to become leaders and innovators.
               </p>
             </div>
-        
+
         </div>
 
     </section>
