--- a/src/templates/hackfestktm.html
+++ b/src/templates/hackfestktm.html
@@ -401,7 +401,7 @@
   <!-- Home -->
 
   <!-- About -->
-  <div id="about" class="content-tab">
+  <div id="about" class="content-tab" style="display: none;">
     <section class="about-tab section is-small">
       <div class="container">
 
@@ -481,7 +481,7 @@
   </div>
 
   <!-- Workshops -->
-  <div id="workshops" class="content-tab">
+  <div id="workshops" class="content-tab" style="display: none;">
     <section class="section is-small">
       <div class="container worshops-columns">
         <div class="card">
