--- a/src/sass/layouts/_hackfest.scss
+++ b/src/sass/layouts/_hackfest.scss
@@ -5,8 +5,12 @@
       margin-top: 24px;
       padding: 1.6rem 0 0 0;
     }
+  }
 
-  
+  .featured{
+    .card{
+      height: 100%;
+    }
   }
 
   .about {
