Update date and fixes

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -109,7 +109,7 @@
 
                 <div class="media">
                   <div class="media-content has-text-centered">
-                    <p class="title is-6">September 16-17, 2019</p>
+                    <p class="title is-6">November 16-17, 2019</p>
                   </div>
                 </div>
 
@@ -259,7 +259,7 @@
               <i class="fa fa-flag"></i>
             </div>
             <div class="timeline-content">
-              <p class="heading">September 09, 2019</p>
+              <p class="heading">November 09, 2019</p>
               <p>Hack Fest Pre Event</p>
             </div>
           </div>
@@ -268,7 +268,7 @@
               <i class="fa fa-flag"></i>
             </div>
             <div class="timeline-content">
-              <p class="heading">September 16-17, 2019</p>
+              <p class="heading">November 16-17, 2019</p>
               <p>Hackathon Main Event</p>
               <span style="opacity: .7">Leapfrog Technology, Charkhal Road, Ktm</span>
             </div>
@@ -326,7 +326,7 @@
           <div class="column is-6">
             <div>
               <h6 class="title is-6">Who can participate?</h6>
-              <p>We are focussing this hackathon for the high school students.
+              <p>We are focusing this hackathon for the high school students.
                 So, if you are a bachelor student, you can join the hackathon. A team of great mentors will be there to
                 advise and guide you each step of the way to complete your project.</p>
             </div>
