--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -109,7 +109,7 @@
 
                 <div class="media">
                   <div class="media-content has-text-centered">
-                    <p class="title is-6">November 16-17, 2019</p>
+                    <p class="title is-6">November 30, 2019 (Saturday)</p>
                   </div>
                 </div>
 
@@ -134,7 +134,7 @@
 
                 <div class="media">
                   <div class="media-content has-text-centered">
-                    <p class="title is-6">10:00 AM - 05:00 PM</p>
+                    <p class="title is-6">09:00 AM - 05:00 PM</p>
                   </div>
                 </div>
 
@@ -192,16 +192,42 @@
           </div>
           <div class="has-padding-6">
             <h4 class="title is-5 is-spaced has-text-centered">Supporters</h4>
+            <div class="partners-list">
             <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">
               <img src="/images/hackfest/devc.png" alt="Facebook Developer Circles kathmandu">
             </a>
+            <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">
+              <img src="/images/hackfest/flutter.svg" alt="Facebook Developer Circles kathmandu">
+            </a>
+            </div>
           </div>
 
           <div class="has-padding-6">
             <h4 class="title is-5 is-spaced has-text-centered">Sponsors</h4>
-            <a href="https://www.lftechnology.com/" target="_blank">
-              <img src="/images/hackfest/leapfrog.png" alt="Facebook Developer Circles kathmandu">
-            </a>
+
+            <div class="partners-list">
+                <a href="http://scst.edu.np/" target="_blank">
+                  <img src="/images/hackfest/sagarmatha.jpg" alt="Facebook Developer Circles kathmandu">
+                </a>
+                <a href="https://www.lftechnology.com/" target="_blank">
+                  <img src="/images/hackfest/leapfrog.png" alt="Facebook Developer Circles kathmandu">
+                </a>
+            </div>
+
+            <!-- <div class="partners__sub has-margin-bottom-4">
+              <h5 class="title is-6 is-spaced has-text-centered" style="color: #dc9f00;">Gold</h5>
+              <a href="http://scst.edu.np/" target="_blank">
+                <img src="/images/hackfest/sagarmatha.jpg" alt="Facebook Developer Circles kathmandu">
+              </a>
+            </div>
+
+            <div class="partners__sub">
+              <h5 class="title is-6 is-spaced has-text-centered" style="color: #6e7175;">Silver</h5>
+              <a href="https://www.lftechnology.com/" target="_blank">
+                <img src="/images/hackfest/leapfrog.png" alt="Facebook Developer Circles kathmandu">
+              </a>
+            </div>
+           -->
           </div>
         </div>
       </div>
@@ -259,8 +285,8 @@
               <i class="fa fa-flag"></i>
             </div>
             <div class="timeline-content">
-              <p class="heading">November 09, 2019</p>
-              <p>Hack Fest Pre Event</p>
+              <p class="heading">November 23, 2019</p>
+              <p>Hack Fest Pre Event (Team formation / Ideathon)</p>
             </div>
           </div>
           <div class="timeline-item is-danger">
@@ -268,7 +294,7 @@
               <i class="fa fa-flag"></i>
             </div>
             <div class="timeline-content">
-              <p class="heading">November 16-17, 2019</p>
+              <p class="heading">November 30, 2019</p>
               <p>Hackathon Main Event</p>
               <span style="opacity: .7">Leapfrog Technology, Charkhal Road, Ktm</span>
             </div>
@@ -316,6 +342,43 @@
         </div>
     </section>
 
+
+    <section class="section is-small">
+        <h4 class="title is-5 is-spaced has-text-centered">Prizes</h4>
+        <div class="container">
+          <div class="columns">
+  
+            <!-- <div class="column">
+                    <div class="card">
+                      <div class="card-content">
+                        <div class="content has-text-left">
+                          <h4 class="title is-6 is-spaced">Youth employment</h4>
+          
+                          Build anything that creates / facilitates a lot of new jobs and attracts a lot of talented people.
+                        </div>
+                      </div>
+                      <footer class="card-footer">
+                        <a href="#" class="card-footer-item">More details</a>
+                      </footer>
+                    </div>
+                  </div> -->
+  
+            <div class="column">
+              <div class="card">
+                <div class="card-content">
+                  <div class="content has-text-left">
+                    Prizes will be coming soon.
+                  </div>
+                </div>
+                <!-- <footer class="card-footer">
+                        <a href="#" class="card-footer-item">More details</a>
+                      </footer> -->
+              </div>
+            </div>
+  
+          </div>
+      </section>
+
     <section class="section is-small">
       <div class="container">
 
@@ -327,7 +390,7 @@
             <div>
               <h6 class="title is-6">Who can participate?</h6>
               <p>We are focusing this hackathon for the high school students.
-                So, if you are a bachelor student, you can join the hackathon. A team of great mentors will be there to
+                So, if you are a bachelor student or just completed your bachelor degree, you can join the hackathon. A team of great mentors will be there to
                 advise and guide you each step of the way to complete your project.</p>
             </div>
             <div>
@@ -348,12 +411,6 @@
           </div>
 
           <div class="column is-6">
-            <div>
-              <h6 class="title is-6">Is it a overnight hackathon ?</h6>
-              <p>We believe that along with programming and stuffs, sound sleep is also equally important for hackers.
-                So,
-                participants can return home at the end of the day and come back next day with renewed energy. </p>
-            </div>
             <div>
               <h6 class="title is-6">What should I bring ?</h6>
               <p>You should probably bring laptop and charger.</p>
@@ -449,6 +506,29 @@
             </div>
 
         </div>
+
+
+        <div class="has-margin-bottom-4">
+            <h4 class="title is-5 has-margin-bottom-6">Sponsors</h2>
+              <div class="has-margin-bottom-5">
+                <h4 class="title is-6 has-margin-bottom-7">
+                  <a href="https://www.facebook.com/BScSCST/" target="_blank">Sagarmatha College of Science and Technology</a>
+                </h4>
+                <p>
+                    Sagarmatha College of Science and Technology was established by a group of professionals dedicated to excellence in IT education in the year 2011, under the affiliation of Tribhuvan University. An educational institution that strives to provide quality education in the field of Computer Science and Information Technology, Sagarmatha currently conducts a four year bachelor level course; B. Sc. in Computer Science and Information Technology (B. Sc. CSIT).
+                </p>
+              </div>
+  
+              <div class="has-margin-bottom-5">
+                <h4 class="title is-6 has-margin-bottom-7">
+                  <a href="https://www.facebook.com/lftechnology/" target="_blank">Flutter Nepal</a>
+                </h4>
+                <p>
+                    Leapfrog is a full-stack technology services company that specializes in SaaS products, Web, and Mobile Applications, and AI. Our world-class teams have capabilities such as product design ( UI and UX), Front End and Back End Engineering, DevOps Engineering, Product Management, Data Engineering, and Machine Learning.
+                </p>
+              </div>
+  
+          </div>
 
     </section>
   </div>
@@ -564,8 +644,10 @@
                     
                     <br />
                     <a class="button is-info"
-                      href="https://docs.google.com/forms/d/e/1FAIpQLScCQOAhkEjbQXUWV057gCi5cgeJ6Gq7d2OuFmPNoW76q-eGTw/viewform"
-                      target="_blank">Register</a>
+                    href="https://www.facebook.com/media/set/?set=oa.975915132754110&type=3"
+                    target="_blank">View Gallery</a>
+
+                    
 
                 </div>
                 <div class="column is-one-third">
@@ -585,29 +667,9 @@
     </section>
   </div>
   <!-- Workshops -->
-
-
-
-  <section class="section sponsorship has-text-white">
-    <div class="container">
-      <div class="sponsorship-content">
-        <h2 class="title is-5 is-spaced has-text-white">Interested in
-          sponsoring ?</h2>
-        <div class="feature-content light-text pt-5 has-margin-bottom-6">
-          Our focus is to build a platform to facilitate collaboration between sponsors and hackers, and enable
-          great minds to join forces
-          to create cool hacks.
-        </div>
-        <div class="pt-30">
-          <a href="https://forms.gle/jaUcwhft7f2vstEC8" class="button button-cta btn-outlined is-bold light-btn rounded"
-            target="_blank">Contact Us</a>
-
-        </div>
-      </div>
-    </div>
-  </section>
   </div>
 
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14129.275412724717!2d85.3272787!3d27.7074399!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe0e02384a2e39f32!2sLeapfrog%20Technology%20Inc.!5e0!3m2!1sen!2snp!4v1571715250303!5m2!1sen!2snp" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
 
   <footer class="footer has-background-dark has-text-white">
