Move Leapfrog to venue partner

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -191,45 +191,37 @@
               </a>
             </div>
           </div>
-          <div class="has-padding-6">
-            <h4 class="title is-5 is-spaced has-text-centered">Supporters</h4>
-            <div class="partners-list">
-            <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">
-              <img src="/images/hackfest/devc.png" alt="Facebook Developer Circles kathmandu">
-            </a>
-            <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">
-              <img src="/images/hackfest/flutter.svg" alt="Facebook Developer Circles kathmandu">
-            </a>
-            </div>
-          </div>
 
           <div class="has-padding-6">
             <h4 class="title is-5 is-spaced has-text-centered">Sponsors</h4>
 
             <div class="partners-list">
                 <a href="http://scst.edu.np/" target="_blank">
-                  <img src="/images/hackfest/sagarmatha.jpg" alt="Facebook Developer Circles kathmandu">
-                </a>
-                <a href="https://www.lftechnology.com/" target="_blank">
-                  <img src="/images/hackfest/leapfrog.png" alt="Facebook Developer Circles kathmandu">
+                  <img src="/images/hackfest/sagarmatha.jpg" alt="Sagarmatha College of Science & Technology">
                 </a>
             </div>
 
-            <!-- <div class="partners__sub has-margin-bottom-4">
-              <h5 class="title is-6 is-spaced has-text-centered" style="color: #dc9f00;">Gold</h5>
-              <a href="http://scst.edu.np/" target="_blank">
-                <img src="/images/hackfest/sagarmatha.jpg" alt="Facebook Developer Circles kathmandu">
-              </a>
-            </div>
-
-            <div class="partners__sub">
-              <h5 class="title is-6 is-spaced has-text-centered" style="color: #6e7175;">Silver</h5>
-              <a href="https://www.lftechnology.com/" target="_blank">
-                <img src="/images/hackfest/leapfrog.png" alt="Facebook Developer Circles kathmandu">
-              </a>
-            </div>
-           -->
           </div>
+          <div class="has-padding-6">
+            <h4 class="title is-5 is-spaced has-text-centered">Venue Partner</h4>
+
+            
+                <a href="https://www.lftechnology.com/" target="_blank">
+                  <img src="/images/hackfest/leapfrog.png" alt="Leapfrog Technology">
+                </a>
+          </div>
+          <div class="has-padding-6">
+            <h4 class="title is-5 is-spaced has-text-centered">Supporters</h4>
+            <div class="partners-list">
+            <a href="https://www.facebook.com/groups/DevCKathmandu/" target="_blank">
+              <img src="/images/hackfest/devc.png" alt="Facebook Developer Circles kathmandu">
+            </a>
+            <a href="https://www.facebook.com/flutterNP/" target="_blank">
+              <img src="/images/hackfest/flutter.svg" alt="Flutter Nepal">
+            </a>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
@@ -487,6 +479,32 @@
 
         </div>
 
+
+        <div class="has-margin-bottom-4">
+          <h4 class="title is-5 has-margin-bottom-6">Sponsors</h2>
+            <div class="has-margin-bottom-5">
+              <h4 class="title is-6 has-margin-bottom-7">
+                <a href="https://www.facebook.com/BScSCST/" target="_blank">Sagarmatha College of Science and Technology</a>
+              </h4>
+              <p>
+                  Sagarmatha College of Science and Technology was established by a group of professionals dedicated to excellence in IT education in the year 2011, under the affiliation of Tribhuvan University. An educational institution that strives to provide quality education in the field of Computer Science and Information Technology, Sagarmatha currently conducts a four year bachelor level course; B. Sc. in Computer Science and Information Technology (B. Sc. CSIT).
+              </p>
+            </div>
+        </div>
+
+
+        <div class="has-margin-bottom-4">
+          <h4 class="title is-5 has-margin-bottom-6">Venue Partner</h2>
+            <div class="has-margin-bottom-5">
+              <h4 class="title is-6 has-margin-bottom-7">
+                <a href="https://www.facebook.com/lftechnology/" target="_blank">Leapfrog Technology</a>
+              </h4>
+              <p>
+                  Leapfrog is a full-stack technology services company that specializes in SaaS products, Web, and Mobile Applications, and AI. Our world-class teams have capabilities such as product design ( UI and UX), Front End and Back End Engineering, DevOps Engineering, Product Management, Data Engineering, and Machine Learning.
+              </p>
+            </div>
+        </div>
+
         <div class="has-margin-bottom-4">
           <h4 class="title is-5 has-margin-bottom-6">Supporters</h2>
             <div class="has-margin-bottom-5">
@@ -499,7 +517,6 @@
                 students and
                 developers. These communities are meant to educate and provide a forum for discussion and knowledge
                 sharing.
-
               </p>
             </div>
 
@@ -511,32 +528,7 @@
               Flutter Nepal is a community of enthusiast Flutter developers with a aim of connecting flutter developers around the country.
               </p>
             </div>
-
         </div>
-
-
-        <div class="has-margin-bottom-4">
-            <h4 class="title is-5 has-margin-bottom-6">Sponsors</h2>
-              <div class="has-margin-bottom-5">
-                <h4 class="title is-6 has-margin-bottom-7">
-                  <a href="https://www.facebook.com/BScSCST/" target="_blank">Sagarmatha College of Science and Technology</a>
-                </h4>
-                <p>
-                    Sagarmatha College of Science and Technology was established by a group of professionals dedicated to excellence in IT education in the year 2011, under the affiliation of Tribhuvan University. An educational institution that strives to provide quality education in the field of Computer Science and Information Technology, Sagarmatha currently conducts a four year bachelor level course; B. Sc. in Computer Science and Information Technology (B. Sc. CSIT).
-                </p>
-              </div>
-  
-              <div class="has-margin-bottom-5">
-                <h4 class="title is-6 has-margin-bottom-7">
-                  <a href="https://www.facebook.com/lftechnology/" target="_blank">Flutter Nepal</a>
-                </h4>
-                <p>
-                    Leapfrog is a full-stack technology services company that specializes in SaaS products, Web, and Mobile Applications, and AI. Our world-class teams have capabilities such as product design ( UI and UX), Front End and Back End Engineering, DevOps Engineering, Product Management, Data Engineering, and Machine Learning.
-                </p>
-              </div>
-  
-          </div>
-
     </section>
   </div>
 
