--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -320,20 +320,20 @@
 
                     <p>Further details will be available soon.</p>
 
-                  <!-- <div class="column">
+                  <div class="column">
                       <h1 class="title is-2"><span>Rs</span> 15,000</h1>
                       <span>First Prize</span>
                   </div>
 
                   <div class="column">
-                      <h1 class="title is-2"><span>Rs</span> 10,000</h1>
+                      <h1 class="title is-2"><span>Rs</span> 8,000</h1>
                       <span>Second Prize</span>
                   </div>
 
                   <div class="column">
                       <h1 class="title is-2"><span>Rs</span> 5,000</h1>
                       <span>Third Prize</span>
-                  </div> -->
+                  </div>
 
                 </div>
 
