--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@ $fullhd: 1152px;
 
 @import "~bulma/bulma.sass";
 @import "~bulma-timeline";
+@import "~bulma-steps/dist/css/bulma-steps.sass";
 @import "./helpers/index";
 @import "./mixins/index";
 @import "./base/index";
